[tool.poetry]
name = "algoprac"
version = "0.1.0"
description = ""
authors = ["Jooeon Kim <joo2theeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
